--- a/room.html
+++ b/room.html
@@ -8,6 +8,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="/public/styles/global.css">
     <link rel="stylesheet" href="/public/styles/room.css">
+    <link rel="stylesheet" href="/public/styles/modal.css">
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
@@ -93,5 +94,25 @@
             </section>
         </main>
     </div>
+
+    <!--Modal-->
+
+    <div class="modal-wrapper">
+        <div class="modal">
+            <h2>Excluir</h2>
+            <p>Tem certeza que você deseja excluir esta pergunta?</p>
+
+            <form action="">
+                <label class="sr-only" for-id="password">Digite sua senha admin</label>
+                <input id="password" type="password" name="password" placeholder="Digite sua senha">
+                <div class="buttons">
+                    <div class="button grey">Cancelar</div>
+                    <button class="red">Sim, excluir</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+
 </body>
 </html>
